# thread_pool

./: .clang-format  CMakeLists.txt  CMakeUserPresets.json  LICENSE
src/sarna/: future.hpp  test.cpp  thread_pool.hpp
